--- a/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
+++ b/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - BSM311</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -18,13 +19,15 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <!-- Left Menu Items -->
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                    </ul>
-
+                        <!-- Left Menu Items -->
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="Customer" asp-controller="Home" asp-action="MyAppointments">My Appointments</a>
+                            </li>
+                        </ul>
                     <!-- Right Menu Items -->
                     <ul class="navbar-nav ms-auto">
                         @if (User.Identity.IsAuthenticated)
